# International-CP-Hack-2024

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.assets/: Inference.excalidraw
.docker/: .env.example
.docker/nginx/: nginx.conf  proxy_params
configs/: .env.example  Environment.py  Minio.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Layout.tsx  main.tsx
frontend/src/components/HRPage/: HRPage.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/LoginPage/: Login.tsx
frontend/src/components/PersonPage/: PersonPage.tsx
frontend/src/http/: api.ts
frontend/src/services/: AuthService.ts  Personality.ts
frontend/src/store/: store.ts
migrations/versions/: 4a21cf5bbfd2_added_main_models.py  64f4f4d80984_add_vacancy.py  f9a6a518d6cd_init.py
ml/: constants.py  dataloader.py  lifespan.py  summarizer.py
ml/jupyters/: comment.ipynb  dataset.ipynb  keypoint.ipynb  train.ipynb
models/: __init__.py  card.py  personality_model.py  user.py  vacancy.py
repositories/: card.py  minio.py  personality_model.py  user.py  vacancy.py
repositories/mixins/: crud.py
routing/v1/: auth.py  card.py  metric.py  personality_model.py  vacancy.py
schemas/: auth.py  card.py  minio.py  personality_models.py  user.py  vacancy.py
services/: auth.py  card.py  minio.py  ml.py  personality_model.py  user.py  vacancy.py
services/mixins/: crud.py
utils/: convertors.py
