[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
ruff = "^0.3.7"
pre-commit = "^3.7.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
minio = "^7.2.10"
pandas = "^2.2.3"
numpy = "<2.0"
llvmlite = "^0.43.0"
openai-whisper = "^20240930"
catboost = "^1.2.7"
imagebind = {git = "https://github.com/Hackathon-Hitchhiking/ImageBind.git"}
librosa = "^0.10.2.post1"
torchaudio = "^2.5.1"
transformers = "^4.46.2"
tensorboard = "^2.18.0"

[tool.ruff]
exclude = ["models/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
